Create new Thread based on method